--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@dnd-kit/core": "6.1.0",
     "@reduxjs/toolkit": "2.2.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
