--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@reduxjs/toolkit": "2.2.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-redux": "9.1.2"
+    "react-redux": "9.1.2",
+    "redux-persist": "6.0.0"
   },
   "devDependencies": {
     "@testing-library/dom": "10.4.0",
